--- a/index.html
+++ b/index.html
@@ -124,21 +124,17 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="space-y-4">
                     <p>I'm a computational astronomy student passionate about understanding the cosmos through the lens of data science and machine learning. My research focuses on AGNs, galaxy evolution, and deep learning applications in astronomy.</p>
-                    <h3 class="text-xl font-bold">Technical Skills</h3>
+                    <h3 class="text-xl font-bold">My Python Package</h3>
                     <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">Python</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">SQL</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">Julia</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">Matlab</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">Latex</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">R</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">C++</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">HTML</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">CSS</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">JS</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">Php</span>
-                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary rounded-full">Flask</span>
-                    </div>
+                        <span class="px-3 py-1 bg-gray-100 dark:bg-dark-secondary flex flex-col items-center text-center">
+    <img src="galamo_main.svg" style="height: 30px;" class="mb-1" />
+    Galamo is an open-source Python package for comprehensive galaxy analysis, integrating machine learning and statistical methods. It provides automated tools for morphology classification, kinematics, photometry, and spectral analysis to aid astrophysical research.
+    <a href="https://www.galamo.org" style="color: #287eff;">"https://www.galamo.org"
+    </a>
+</span>
+
+                    
+                      </div>
                 </div>
                 <div class="bg-gray-100 dark:bg-dark-secondary rounded-lg p-6">
                     <h3 class="text-xl font-bold mb-4">Education</h3>
