--- a/documents.html
+++ b/documents.html
@@ -317,6 +317,11 @@
                 caption: "Summer School on Gravitational-Wave Astronomy, ICTS-TIFR, Bengalore",
                 date: "7th July - 18th july"
             },
+            {
+                id: 5,src: "documents/adventurex.png",
+                caption: "Selected for Final Round of China's Biggest Hackathon - AdvnetureX",
+                date: "20th July - 31th July"
+            },
         ];
         function createGalleryItem(image) {
     const item = document.createElement('div');
