--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <p class="text-sm">2024 • The Millennium School</p>
                         </div>
                         <div>
-                            <a href="cv16thmay25.pdf" style="color:rgb(95, 95, 255)" target="_blank">Bored? Check out my CV!</a>
+                            <a href="cv_jsdingra.pdf" style="color:rgb(95, 95, 255)" target="_blank">Bored? Check out my CV!</a>
                         </div>
                     </div>
                 </div>
