--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <h3 class="text-xl font-bold mb-4">Education</h3>
                     <div class="space-y-4">
                         <div>
-                            <p class="font-bold">B.Sc. in Physics</p>
+                            <p class="font-bold">M.Sc. FYIP Physics</p>
                             <p class="text-sm">Expected 2027 • Guru Nanak Dev University</p>
                         </div>
                         <div>
