--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                         <div>
                             <a href="cv_jsdingra.pdf" style="color:rgb(95, 95, 255)" target="_blank">Bored? Check out my CV!</a>
                         </div>
+                        <div>
+                            <a href="https://www.youtube.com/playlist?list=PL54Wg1cwz_jO8lR12W_DJWXkAUlpTlx4w" style="color:rgb(95, 95, 255)" target="_blank">Lecture Series on Computational Physics - J.S. Dingra</a>
+                        </div>
                     </div>
                 </div>
             </div>
