--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   <div id="modal7" class="fixed inset-0 hidden z-50 flex items-center justify-center bg-black bg-opacity-50">
     <div class="bg-white dark:bg-dark p-6 rounded-lg max-w-lg w-full relative shadow-lg">
       <button class="absolute top-2 right-2 text-gray-600 hover:text-red-600 text-2xl" onclick="closeModal('modal7')">&times;</button>
-      <h3 class="text-2xl font-bold mb-2">GJCEI</h3>
+      <h3 class="text-2xl font-bold mb-2">Ideathon 2025, GJCEI</h3>
       <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Won 1st Prize of 15000 Ruppee for my startup in Ideathon 2025 @ Golden Jubliee Center of Entrepreneurship and Innovation, Guru Nanak Dev University, Amritsar</p>
     </div>
   </div>
