--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <p class="text-sm">Expected 2027 • Guru Nanak Dev University</p>
                         </div>
                         <div>
-                            <p class="font-bold">High School in Maths, Physics, Chemistry Majors</p>
+                            <p class="font-bold">High School in Maths, Chemistry, Physics Majors</p>
                             <p class="text-sm">2024 • The Millennium School</p>
                         </div>
                         <div>
