--- a/nspd/index.html
+++ b/nspd/index.html
@@ -218,7 +218,7 @@
             </div>
             <form id="registrationForm">
                 <div class="window-body">
-                    <p>Please fill in your details below.</p>
+                    <p>Please fill in your correct details below, exact details will be used in the certificate.</p>
                     <div class="field-row">
                         <label for="name">Name:</label>
                         <input type="text" id="name" required />
