--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
           <span class="text-white text-lg font-semibold">View</span>
         </div>
       </div>
+        
+      <div class="relative group cursor-pointer rounded-xl border-4 border-blue-300 overflow-hidden shadow-md hover:shadow-xl transition" onclick="openModal('modal11')">
+        <img src="iist.jpeg" alt="AGN Classification" class="w-full h-64 object-cover" />
+        <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
+          <span class="text-white text-lg font-semibold">View</span>
+        </div>
+      </div>
       <div class="relative group cursor-pointer rounded-xl border-4 border-blue-300 overflow-hidden shadow-md hover:shadow-xl transition" onclick="openModal('modal2')">
         <img src="icnpa.jpeg" alt="AGN Classification" class="w-full h-64 object-cover" />
         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
@@ -223,6 +230,14 @@
       <button class="absolute top-2 right-2 text-gray-600 hover:text-red-600 text-2xl" onclick="closeModal('modal7')">&times;</button>
       <h3 class="text-2xl font-bold mb-2">Ideathon 2025, GJCEI</h3>
       <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Won 1st Prize of 15000 Ruppee for my startup in Ideathon 2025 @ Golden Jubliee Center of Entrepreneurship and Innovation, Guru Nanak Dev University, Amritsar</p>
+    </div>
+  </div>
+     
+  <div id="modal2" class="fixed inset-0 hidden z-50 flex items-center justify-center bg-black bg-opacity-50">
+    <div class="bg-white dark:bg-dark p-6 rounded-lg max-w-lg w-full relative shadow-lg">
+      <button class="absolute top-2 right-2 text-gray-600 hover:text-red-600 text-2xl" onclick="closeModal('modal11')">&times;</button>
+      <h3 class="text-2xl font-bold mb-2">IIST Astronomy Summer School 2025</h3>
+      <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Got selected in in-person Astronomy Summer School @ IIST, Kerala 2025</p>
     </div>
   </div>
   <div id="modal2" class="fixed inset-0 hidden z-50 flex items-center justify-center bg-black bg-opacity-50">
