--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -425,7 +425,7 @@
 
         function verifyAdmin() {
             const pass = document.getElementById('adminPass').value;
-            if(pass === "admin123") {
+            if(pass === "qwertyuiop") {
                 document.getElementById('loginView').classList.add('hidden');
                 document.getElementById('dataView').classList.remove('hidden');
                 loadData();
