--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -153,6 +153,7 @@
                     <div class="flex-1 text-left">
                         <h4 class="font-bold text-xl text-white">J.S. Dingra</h4>
                         <p class="text-xs text-red-400 uppercase tracking-widest font-bold">Lead Instructor</p>
+                        <small>Ex-IIST/IUCAA Intern & AGN Researcher</small>
                         
                         <div class="flex gap-4 mt-2">
                             <a href="https://www.astrodingra.in" target="_blank" class="text-gray-400 hover:text-blue-400 text-sm flex items-center gap-1 transition">
