--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -226,8 +226,8 @@
                     <p id="success-payid" class="font-mono text-sm text-green-300"></p>
                 </div>
 
-                <a href="https://chat.whatsapp.com/H1GTT0N0BYm5Xn26E6m7xX?mode=hqrt3" class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-xl font-bold w-full transition">
-                    <i class="fa-brands fa-whatsapp mr-2"></i> Join Class Group
+                <a href="#" class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-xl font-bold w-full transition">
+                     Thank You, You will be added to the group Soon!
                 </a>
             </div>
 
