--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -241,12 +241,12 @@
                 <div class="bg-white/5 border border-white/10 p-4 rounded-lg w-full mb-6 text-left">
                     <p class="text-sm text-gray-300">
                         <i class="fa-solid fa-circle-check text-green-500 mr-1"></i> Screenshot uploaded successfully.<br>
-                        Our admin will verify the payment and you will receive a WhatsApp message shortly.
+                        Our admin will verify the payment and you will receive a confirmation mail shortly.
                     </p>
                 </div>
 
-                <a href="#" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-xl font-bold w-full transition text-sm">
-                      <i class="fa-brands fa-whatsapp mr-2"></i> Contact Support
+                <a href="mailto:astrodingra@gmail.com" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-xl font-bold w-full transition text-sm">
+                      <i class="fa-brands fa-envelope mr-2"></i> Contact Support
                 </a>
             </div>
 
