--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -150,6 +150,7 @@
                         <div class="text-right">
                             <p class="text-xs text-gray-400">Account Holder</p>
                             <p class="text-sm font-bold text-white tracking-wide">Jashanpreet Singh</p>
+                            <p class="text-xs text-gray-400">astrodingra@okhdfcbank</p>
                         </div>
                     </div>
                 </div>
