--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -195,7 +195,7 @@
                 <div class="bg-white/5 border border-white/10 p-4 rounded-lg w-full mb-6 text-left">
                     <p class="text-sm text-gray-300">
                         <i class="fa-solid fa-circle-check text-green-500 mr-1"></i> Screenshot uploaded successfully.<br>
-                        Our admin will verify the payment and you will receive a WhatsApp message shortly.
+                        Our admin will verify the payment and you will receive a confirmation message shortly.
                     </p>
                 </div>
 
