--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -200,7 +200,7 @@
                 </div>
 
                 <a href="mailto:astrodingra@gmail.com" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-xl font-bold w-full transition text-sm">
-                      <i class="fa-brands fa-envelope mr-2"></i> Contact Support
+                       Contact Support
                 </a>
             </div>
         </div>
