--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -155,7 +155,7 @@
                 <p class="text-xs text-gray-400 mb-4">Scan QR code and upload screenshot below.</p>
 
                 <div class="bg-white p-2 rounded-lg inline-block mb-4 shadow-xl">
-                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=upi://pay?pa=YOUR_UPI_HERE&pn=Sitee&am=1299" alt="Payment QR" class="w-48 h-48 object-contain"> 
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=upi://pay?pa=astrodingra@okhdfcbank&pn=Sitee&am=1299" alt="Payment QR" class="w-48 h-48 object-contain"> 
                 </div>
 
                 <div class="bg-gray-800/50 rounded-lg p-4 mb-4 text-left">
