--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -213,7 +213,9 @@
                 <i class="fa-solid fa-lock"></i>
             </button>
         </p>
+        <a href="mailto:astrodingra@gmail.com">Support</a>
     </footer>
+    
 
     <div id="adminPanel" class="fixed inset-0 bg-black/90 backdrop-blur-md z-[100] hidden flex items-center justify-center p-4">
         <div class="bg-gray-900 border border-gray-700 w-full max-w-6xl h-[90vh] rounded-2xl flex flex-col shadow-2xl overflow-hidden">
