--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -213,7 +213,7 @@
                 <i class="fa-solid fa-lock"></i>
             </button>
         </p>
-        <a href="mailto:astrodingra@gmail.com">Support</a>
+        <a class="text-gray-500 text-xs" href="mailto:astrodingra@gmail.com">Support</a>
     </footer>
     
 
