--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -168,7 +168,7 @@
                     <div class="bg-white/5 border border-white/10 rounded-xl p-4">
                         <span class="text-xs font-bold text-gray-400 uppercase tracking-widest block mb-3">Option 1: UPI / QR</span>
                         <div class="bg-white p-2 rounded-lg inline-block shadow-xl">
-                            <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=upi://pay?pa=astrodingra@okhdfcbank&pn=AGNSCHOOL&am=1299" alt="Payment QR" class="w-32 h-32 object-contain"> 
+                            <img src="qr2.jpg" alt="Payment QR" class="w-32 h-32 object-contain"> 
                         </div>
                         <p class="text-xs text-gray-400 mt-2">Scan with GPay, Paytm, or PhonePe</p>
                     </div>
