--- a/dac-school/index.html
+++ b/dac-school/index.html
@@ -57,7 +57,7 @@
             <div class="flex flex-wrap gap-3 justify-center lg:justify-start">
                 <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-red-900/30 border border-red-500/30 text-red-300 text-xs font-bold tracking-wide">
                     <span class="w-2 h-2 rounded-full bg-red-500 animate-pulse"></span>
-                    DEADLINE: 29th Dec 2025
+                    DEADLINE EXTENDED : 1st Jan 2026
                 </div>
                 <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-blue-900/30 border border-blue-500/30 text-blue-300 text-xs font-bold tracking-wide">
                     <i class="fa-regular fa-calendar-days"></i>
