--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
-    <title>Jashanpreet Singh Dingra | Computational Astronomer</title>
+    <title>Jashanpreet Singh Dingra | Computational Astronomer & Astrophysicist</title>
     <meta name="title" content="Jashanpreet Singh Dingra | Computational Astronomer & AI Researcher">
-    <meta name="description" content="Official portfolio of Jashanpreet Singh Dingra, a computational astronomer focused on AGNs, galaxy evolution, and machine learning applications in astronomy. Explore research, outreach, and publications.">
+    <meta name="description" content="Official portfolio of Jashanpreet Singh Dingra, a computational astronomer specializing in Astrophysics, AGNs, Galaxy Evolution, and Machine Learning. Discover research on Black Holes, open-source Astronomy tools like GALAMO, and AI innovations.">
+    <meta name="keywords" content="Computational Astronomy, Astrophysics, Galaxy Evolution, AGN, Active Galactic Nuclei, Machine Learning in Astronomy, Python for Astronomy, Galamo, Jashanpreet Singh Dingra, Astroinformatics, Cosmology, Star Formation, Black Hole Mass, SDSS Data Analysis, AI Researcher">
+    <meta name="author" content="Jashanpreet Singh Dingra">
+    <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.dingra.galamo.org/">
+    <meta property="og:url" content="https://www.astrodingra.in">
     <meta property="og:title" content="Jashanpreet Singh Dingra | Computational Astronomer & AI Researcher">
     <meta property="og:description" content="Explore Jashanpreet Singh Dingra's work on black holes, AGNs, galaxy morphology, and AI in astrophysics. Includes publications, outreach, and open-source tools like GALAMO.">
     <meta property="og:image" content="ICNPA.jpeg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.dingra.galamo.org/">
+    <meta name="twitter:url" content="https://www.astrodingra.in">
     <meta name="twitter:title" content="Jashanpreet Singh Dingra | Computational Astronomer & AI Researcher">
     <meta name="twitter:description" content="Official research site of Jashanpreet Singh Dingra. Topics include AGNs, AI in astronomy, and public outreach.">
     <meta name="twitter:image" content="ICNPA.jpeg">
@@ -26,7 +29,41 @@
     <link rel="icon" type="image/png" href="o.svg" />
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://www.dingra.galamo.org/" />
+    <link rel="canonical" href="https://www.astrodingra.in" />
+
+    <!-- JSON-LD Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Jashanpreet Singh Dingra",
+      "jobTitle": "Computational Astronomer & AI Researcher",
+      "url": "https://www.astrodingra.in",
+      "image": "https://www.astrodingra.inICNPA.jpeg",
+      "sameAs": [
+        "https://github.com/jsdingra11",
+        "https://www.linkedin.com/in/jashanpreet-singh-dingra-2046b4206/",
+        "https://www.instagram.com/astrodingra"
+      ],
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "Guru Nanak Dev University"
+      },
+      "worksFor": [
+        {
+          "@type": "Organization",
+          "name": "Galamo",
+          "url": "https://www.galamo.org"
+        },
+        {
+          "@type": "Organization",
+          "name": "Sitee.in",
+          "url": "https://www.sitee.in"
+        }
+      ],
+      "knowsAbout": ["Computational Astrophysics", "Machine Learning", "Galaxy Dynamics", "Black Holes", "Python Development", "Web Development"]
+    }
+    </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
