--- a/index.html
+++ b/index.html
@@ -215,6 +215,36 @@
                         </div>
                     </div>
                 </div>
+                <!-- TEXWOLF BOX -->
+<div class="mt-6">
+    <h3 class="text-xl font-bold mb-2">Founder Project</h3>
+
+    <div class="bg-gray-100 dark:bg-dark-secondary p-4 rounded-lg flex flex-col items-center text-center border-l-4 border-gray-800 dark:border-gray-200">
+        
+        <!-- LOGO -->
+        <img src="https://texwolf.com/light.png"
+             alt="TexWolf Logo"
+             class="h-10 mb-2 dark:invert" />
+
+        <!-- NAME -->
+        <h4 class="font-bold text-lg">TexWolf</h4>
+
+        <!-- COPY (SAME ENERGY AS SITEE) -->
+        <p class="text-sm mb-2 mt-1">
+            Founder of <strong>TexWolf</strong>, a free, local-first LaTeX editor with
+            <strong>unlimited collaborators</strong>. Built as a private, offline-first
+            alternative to Overleaf — no cloud, no limits.
+        </p>
+
+        <!-- LINK -->
+        <a href="https://texwolf.com"
+           class="text-blue-600 hover:text-blue-500 font-semibold"
+           target="_blank">
+            Visit TexWolf →
+        </a>
+    </div>
+</div>
+
             </div>
         </div>
     </section>
