--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     Founder of <strong>Sitee.in</strong>, a generative AI startup. I developed a custom LLM with <strong>1.2B+ parameters</strong> specialized in full-stack web development to generate complete, deployable web apps instantly.
                                 </p>
                                 <a href="https://www.sitee.in" class="text-indigo-600 hover:text-indigo-500 font-semibold" target="_blank">
-                                    Visit Sitee.in <i class="bi bi-arrow-right-short"></i>
+                                    Visit sitee.in <i class="bi bi-arrow-right-short"></i>
                                 </a>
                             </div>
                         </div>
@@ -248,7 +248,7 @@
                             <a href="https://texwolf.com"
                                class="text-blue-600 hover:text-blue-500 font-semibold"
                                target="_blank">
-                                Visit TexWolf →
+                                Visit texwolf.com →
                             </a>
                         </div>
                     </div>
