--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <a href="https://texwolf.com"
                                class="text-blue-600 hover:text-blue-500 font-semibold"
                                target="_blank">
-                                Visit texwolf.com →
+                                Visit texwolf.com <i class="bi bi-arrow-right-short"></i>
                             </a>
                         </div>
                     </div>
