--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <p class="text-sm mb-2 mt-1">
                                     Founder of <strong>Sitee.in</strong>, a generative AI startup. I developed a custom LLM with <strong>1.2B+ parameters</strong> specialized in full-stack web development to generate complete, deployable web apps instantly.
                                 </p>
-                                <a href="https://www.sitee.in" class="text-indigo-600 hover:text-indigo-500 font-semibold" target="_blank">
+                                <a href="https://www.sitee.in" class="text-blue-600 hover:text-blue-500 font-semibold" target="_blank">
                                     Visit sitee.in <i class="bi bi-arrow-right-short"></i>
                                 </a>
                             </div>
