--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <hr class="border-gray-300 dark:border-dark-border">
                             <div>
                                 <a href="cv_jsdingra.pdf" class="text-blue-600 hover:underline flex items-center gap-2" target="_blank">
-                                    <i class="bi bi-file-earmark-person"></i> Check out my CV
+                                    <i class="bi bi-file-earmark-person"></i>Bored? Check out my CV
                                 </a>
                             </div>
                             <div>
