--- a/index.html
+++ b/index.html
@@ -243,13 +243,18 @@
                                 <strong>unlimited collaborative projects</strong>. Built as a private, offline-first
                                 alternative to Overleaf, no cloud, no limits and totally for <strong>free</strong>.
                             </p>
-
+    <a href="https://doi.org/10.5281/zenodo.18274953"
+                               class="text-blue-600 hover:text-blue-500 font-semibold"
+                               target="_blank">
+                                https://doi.org/10.5281/zenodo.18274953<i class="bi bi-arrow-right-short"></i>
+                            </a>
                             <!-- LINK -->
                             <a href="https://texwolf.com"
                                class="text-blue-600 hover:text-blue-500 font-semibold"
                                target="_blank">
                                 Visit texwolf.com <i class="bi bi-arrow-right-short"></i>
                             </a>
+                            
                         </div>
                     </div>
                 </div>
