--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
                             </p>
 
                             <!-- LINK -->
+                            <a href="https://zenodo.org/records/18274953"
+                               class="text-blue-600 hover:text-blue-500 font-semibold"
+                               target="_blank">
+                                https://doi.org/10.5281/zenodo.18274953 <i class="bi bi-arrow-right-short"></i>
+                            </a>
                             <a href="https://texwolf.com"
                                class="text-blue-600 hover:text-blue-500 font-semibold"
                                target="_blank">
